2010-03-12	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* fileio/init.c: Remove deprecation warnings.

2010-03-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* fileio/init.c: Fix warnings for ctype methods.

2009-11-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* loopback/init.c: Adjust return-type of rtems_bsdnet_loopattach to
	int to match with rtems/rtems_bsdnet.h.

2009-10-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* base_mp/apptask.c: Use PRIxrtems_id to print rtems_ids.
	Include "tmacros.h".
	* base_mp/node1/Makefile.am, base_mp/node2/Makefile.am:
	Add -I$(top_srcdir)/../support/include.

2009-10-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* pppd/netconfig.h: Add UL suffix to long constants to avoid
	implicit integer overflows on 16bit targets.
	* fileio/init.c: Use %zd to print ssize_t.

2009-10-27	Ralf Corsépius <ralf.corsepius@rtems.org>

	* base_sp/apptask.c, unlimited/init.c:
	Use PRIdrtems_task_argument to print rtems_task_argument's.

2009-10-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* base_sp/apptask.c, unlimited/init.c, unlimited/test1.c,
	unlimited/test2.c, unlimited/test3.c:
	Include "tmacros.h". Use PRIxrtems_id to print rtems_ids.
	* unlimited/Makefile.am, base_sp/Makefile.am:
	Add -I$(top_srcdir)/../support/include.

2009-10-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* loopback/init.c : Add prototype for rtems_bsdnet_loopattach.
	Remove evil type-cast.
	* nsecs/rprintf.h: Remove (PRItime_t moved to tmacros.h).
	* nsecs/Makefile.am: Add -I$(top_srcdir)/../support/include.
	* nsecs/init.c: Include "tmacros.h" instead of "rprintf.h"

2009-10-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	* capture/init.c: Remove setup_tasks_to_watch.
	* capture/system.h: Remove test*().
	Add setup_tasks_to_watch().
	* capture/test1.c: Fix prototype.
	* fileio/init.c: Fix broken printfs.
	* minimum/init.c: Remove unused var.
	* nsecs/empty.c: Add missing prototype.
	* nsecs/rprintf.h: New.
	* nsecs/init.c: Printf fixes.