@@ -24,6 +24,7 @@
 #include <rtems.h>
 #include <rtems/monitor.h>
 
+#if !BSP_SMALL_MEMORY
 static volatile int capture_CT1a_deleted;
 static volatile int capture_CT1b_deleted;
 static volatile int capture_CT1c_deleted;
@@ -268,3 +269,4 @@ void setup_tasks_to_watch (void)
        cmd++)
       rtems_monitor_insert_cmd (&capture_cmds[cmd]);
 }
+#endif /* BSP_SMALL_MEMORY */
