@@ -1,3 +1,8 @@
+2010-03-29	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>
+
+	* capture/init.c, capture/test1.c, paramoia/init.c,
+	paranoia/paranoia.c: exclude tests for SMALL MEMORY targets
+
 2010-03-12	Sebastian Huber <Sebastian.Huber@embedded-brains.de>
 
 	* fileio/init.c: Remove deprecation warnings.
